# kairos

./: .env.example  .gitignore  PROGRESS.md  README.md  pyproject.toml
data/curation/: pre_1933_core_nn.csv
data/processed/: inventory_works.csv
scripts/: diagnostic_check_boundary.py  fetch_abstracts.py  fetch_boundary.py  inventory_works.py  preprocessing_check_boundary.py  preprocessing_resolve_openalex_topics.py
src/kairos/: __init__.py
src/kairos/data/: __init__.py  api.py  config.py  topics.py  work.py
tests/: test_api.py  test_topics.py  test_work.py
