[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kairos"
version = "0.1.0"
description = "Can field-state signals predict whether a scientific breakthrough is coming?"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27,<1",
    "matplotlib>=3.8,<4",
    "pandas>=2.2,<3",
    "pyarrow>=16,<23",
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "respx>=0.21,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that require live network access or recorded API responses",
]
